--- a/.config/conky/stats.conf
+++ b/.config/conky/stats.conf
@@ -39,29 +39,26 @@ conky.text = [[
 ${voffset 0}${goto 130}${font DejaVu Sans Mono:size=14}${time %A, %d %B %Y}
 ${goto 90}${font DejaVu Sans Mono:size=48}${time %H:%M:%S}
 
-${voffset 110}${goto 50}${font DejaVu Sans Mono:size=12}Uptime: ${uptime}
+${voffset 50}${goto 50}${font DejaVu Sans Mono:size=12}Uptime: ${uptime}
 
-${voffset 10}${goto 50}CPU: ${cpu cpu0}% ${cpubar 8,200}
 ${goto 50}CPU Model: ${execi 6000 cat /proc/cpuinfo | grep "model name" | uniq | cut -d ":" -f2}
+${voffset 10}${goto 50}CPU: ${cpu cpu0}% ${cpubar 8,200}
 ${goto 50}CPU Cores: ${exec nproc}
 
 ${goto 50}RAM: $mem / $memmax ($memperc%) ${membar 8,200}
 ${goto 50}RAM Speed: ${execi 3600 sudo lshw -C memory | grep clock | head -n1 | awk '{print $2, $3}'}
 
-${goto 50}GPU Temp: ${execi 10 nvidia-smi --query-gpu=temperature.gpu --format=csv,noheader,nounits}°C
-${goto 50}GPU Usage: ${execi 10 nvidia-smi --query-gpu=utilization.gpu --format=csv,noheader,nounits}%
-${goto 50}GPU Clock: ${execi 10 nvidia-smi --query-gpu=clocks.gr --format=csv,noheader,nounits} MHz
 ${goto 50}GPU Name: ${execi 3600 nvidia-smi --query-gpu=name --format=csv,noheader}
+${goto 50}GPU Usage: ${execi 10 nvidia-smi --query-gpu=utilization.gpu --format=csv,noheader,nounits}%
+${goto 50}GPU Temp: ${execi 10 nvidia-smi --query-gpu=temperature.gpu --format=csv,noheader,nounits}°C
 
-${voffset 20}${goto 50}Disk Usage:
+${voffset 10}${goto 50}Disk Usage:
 ${goto 50}/: ${fs_used /} / ${fs_size /} (${fs_used_perc /}%) ${fs_bar 8,200 /}
 ${goto 50}/home: ${fs_used /home} / ${fs_size /home} (${fs_used_perc /home}%) ${fs_bar 8,200 /home}
 
-${voffset 20}${goto 50}Network:
-${goto 50}IP Address: ${addr wlp5s0}
+${voffset 10}${goto 50}Network IP Address: ${addr wlp5s0} 
 ${goto 50}Down: ${downspeedf wlp5s0} KiB/s ${downspeedgraph wlp5s0 25,200 00ff00 ff0000}
 ${goto 50}Up:   ${upspeedf wlp5s0} KiB/s ${upspeedgraph wlp5s0 25,200 00ffff ff00ff}
-
 
 ]];
 
