adding landscape version

--- a/.config/conky/stats.conf
+++ b/.config/conky/stats.conf
@@ -36,10 +36,10 @@ conky.config = {
 };
 
 conky.text = [[
-${voffset 0}${goto 130}${font DejaVu Sans Mono:size=14}${time %A, %d %B %Y}
-${goto 90}${font DejaVu Sans Mono:size=48}${time %H:%M:%S}
+${voffset 0}${goto 330}${font DejaVu Sans Mono:size=14}${time %A, %d %B %Y}
+${goto 290}${font DejaVu Sans Mono:size=48}${time %H:%M:%S}
 
-${voffset 50}${goto 50}${font DejaVu Sans Mono:size=12}Uptime: ${uptime}
+${voffset 50}${goto 50}${font DejaVu Sans Mono:size=10}Uptime: ${uptime}
 
 ${goto 50}CPU Model: ${execi 6000 cat /proc/cpuinfo | grep "model name" | uniq | cut -d ":" -f2}
 ${voffset 10}${goto 50}CPU: ${cpu cpu0}% ${cpubar 8,200}
@@ -52,9 +52,8 @@ ${goto 50}GPU Name: ${execi 3600 nvidia-smi --query-gpu=name --format=csv,nohead
 ${goto 50}GPU Usage: ${execi 10 nvidia-smi --query-gpu=utilization.gpu --format=csv,noheader,nounits}%
 ${goto 50}GPU Temp: ${execi 10 nvidia-smi --query-gpu=temperature.gpu --format=csv,noheader,nounits}°C
 
-${voffset 10}${goto 50}Disk Usage:
-${goto 50}/: ${fs_used /} / ${fs_size /} (${fs_used_perc /}%) ${fs_bar 8,200 /}
-${goto 50}/home: ${fs_used /home} / ${fs_size /home} (${fs_used_perc /home}%) ${fs_bar 8,200 /home}
+${voffset -100}${goto 50}Disk Usage:
+${goto 50}/: ${fs_used /} / ${fs_size /} (${fs_used_perc /}%) ${fs_bar 8,200 /}${goto 300}/home: ${fs_used /home} / ${fs_size /home} (${fs_used_perc /home}%) ${fs_bar 8,200 /home}
 
 ${voffset 10}${goto 50}Network IP Address: ${addr wlp5s0} 
 ${goto 50}Down: ${downspeedf wlp5s0} KiB/s ${downspeedgraph wlp5s0 25,200 00ff00 ff0000}
