--- a/.config/conky/stats.conf
+++ b/.config/conky/stats.conf
@@ -17,8 +17,8 @@ conky.config = {
     minimum_width = 1200,
     minimum_height = 800,
     alignment = 'top_left',
-    gap_x = 2560+50,
-    gap_y = 50,
+    gap_x = 5120 + 50,
+    gap_y = 630 + 50,
 
     draw_shades = false,
     draw_outline = false,
@@ -36,29 +36,42 @@ conky.config = {
 };
 
 conky.text = [[
-${voffset 0}${goto 130}${font DejaVu Sans Mono:size=14}${time %A, %d %B %Y}
-${goto 90}${font DejaVu Sans Mono:size=48}${time %H:%M:%S}
+${voffset 0}${goto 470}${font DejaVu Sans Mono:size=14}${time %A, %d %B %Y}
+${goto 410}${font DejaVu Sans Mono:size=48}${time %H:%M:%S}
 
 ${voffset 50}${goto 50}${font DejaVu Sans Mono:size=12}Uptime: ${uptime}
 
 ${goto 50}CPU Model: ${execi 6000 cat /proc/cpuinfo | grep "model name" | uniq | cut -d ":" -f2}
 ${voffset 10}${goto 50}CPU: ${cpu cpu0}% ${cpubar 8,200}
+${goto 50}CPU Temp: ${execi 10 sensors | grep 'Tctl:' | awk '{print $2}'}
 ${goto 50}CPU Cores: ${exec nproc}
+${goto 50}Current CPU Clock: ${freq_g} GHz
+${goto 50}Top CPU Processes:
+${goto 70}${top name 1} - ${top cpu 1}%
+${goto 70}${top name 2} - ${top cpu 2}%
+${goto 70}${top name 3} - ${top cpu 3}%
+
 
 ${goto 50}RAM: $mem / $memmax ($memperc%) ${membar 8,200}
 ${goto 50}RAM Speed: ${execi 3600 sudo lshw -C memory | grep clock | head -n1 | awk '{print $2, $3}'}
-
-${goto 50}GPU Name: ${execi 3600 nvidia-smi --query-gpu=name --format=csv,noheader}
-${goto 50}GPU Usage: ${execi 10 nvidia-smi --query-gpu=utilization.gpu --format=csv,noheader,nounits}%
-${goto 50}GPU Temp: ${execi 10 nvidia-smi --query-gpu=temperature.gpu --format=csv,noheader,nounits}°C
-
-${voffset 10}${goto 50}Disk Usage:
+${goto 50}Available RAM: ${memavail}
+${voffset -220}${goto 700}GPU Name: ${execi 3600 nvidia-smi --query-gpu=name --format=csv,noheader}
+${goto 700}GPU Driver: ${execi 3600 nvidia-smi --query-gpu=driver_version --format=csv,noheader}
+${goto 700}GPU Usage: ${execi 10 nvidia-smi --query-gpu=utilization.gpu --format=csv,noheader,nounits}%
+${goto 700}GPU Temp: ${execi 10 nvidia-smi --query-gpu=temperature.gpu --format=csv,noheader,nounits}°C
+${goto 700}GPU Clock (Memory): ${execi 10 nvidia-smi --query-gpu=clocks.mem --format=csv,noheader,nounits} MHz
+${goto 700}GPU Memory Total: ${execi 3600 nvidia-smi --query-gpu=memory.total --format=csv,noheader,nounits} MiB
+${goto 700}GPU Fan Speed: ${execi 10 nvidia-smi --query-gpu=fan.speed --format=csv,noheader,nounits}%
+${goto 700}GPU Power Draw: ${execi 10 nvidia-smi --query-gpu=power.draw --format=csv,noheader,nounits} W
+${voffset 100}${goto 50}Disk Usage:
 ${goto 50}/: ${fs_used /} / ${fs_size /} (${fs_used_perc /}%) ${fs_bar 8,200 /}
 ${goto 50}/home: ${fs_used /home} / ${fs_size /home} (${fs_used_perc /home}%) ${fs_bar 8,200 /home}
+${goto 50}workspace: ${fs_used /home/zozo/workspaces} / ${fs_size /home/zozo/workspaces} (${fs_used_perc /home/zozo/workspaces}%) ${fs_bar 8,200 /home/zozo/workspaces}
 
-${voffset 10}${goto 50}Network IP Address: ${addr wlp5s0} 
-${goto 50}Down: ${downspeedf wlp5s0} KiB/s ${downspeedgraph wlp5s0 25,200 00ff00 ff0000}
-${goto 50}Up:   ${upspeedf wlp5s0} KiB/s ${upspeedgraph wlp5s0 25,200 00ffff ff00ff}
+${voffset -120}${goto 700}Network IP Address: ${addr wlp14s0} 
+${goto 700}Connection Type: ${if_existing /sys/class/net/wlp14s0/operstate up}WiFi${else}${if_existing /sys/class/net/enp3s0/operstate up}Ethernet${else}Disconnected${endif}${endif}
+${goto 700}Down: ${downspeedf wlp14s0} KiB/s ${downspeedgraph wlp14s0 25,200 00ff00 ff0000}
+${goto 700}Up:   ${upspeedf wlp14s0} KiB/s ${upspeedgraph wlp14s0 25,200 00ffff ff00ff}
 
 ]];
 
