adding additional workspace

--- a/.config/conky/stats.conf
+++ b/.config/conky/stats.conf
@@ -55,20 +55,24 @@ ${goto 70}${top name 3} - ${top cpu 3}%
 ${goto 50}RAM: $mem / $memmax ($memperc%) ${membar 8,200}
 ${goto 50}RAM Speed: ${execi 3600 sudo lshw -C memory | grep clock | head -n1 | awk '{print $2, $3}'}
 ${goto 50}Available RAM: ${memavail}
+${goto 50}Swap: $swap / $swapmax ($swapperc%) ${swapbar 8,200}
+
 ${voffset -220}${goto 700}GPU Name: ${execi 3600 nvidia-smi --query-gpu=name --format=csv,noheader}
 ${goto 700}GPU Driver: ${execi 3600 nvidia-smi --query-gpu=driver_version --format=csv,noheader}
 ${goto 700}GPU Usage: ${execi 10 nvidia-smi --query-gpu=utilization.gpu --format=csv,noheader,nounits}%
 ${goto 700}GPU Temp: ${execi 10 nvidia-smi --query-gpu=temperature.gpu --format=csv,noheader,nounits}°C
+${goto 700}GPU Memory Used: ${execi 5 nvidia-smi --query-gpu=memory.used --format=csv,noheader,nounits} MiB
 ${goto 700}GPU Clock (Memory): ${execi 10 nvidia-smi --query-gpu=clocks.mem --format=csv,noheader,nounits} MHz
 ${goto 700}GPU Memory Total: ${execi 3600 nvidia-smi --query-gpu=memory.total --format=csv,noheader,nounits} MiB
 ${goto 700}GPU Fan Speed: ${execi 10 nvidia-smi --query-gpu=fan.speed --format=csv,noheader,nounits}%
 ${goto 700}GPU Power Draw: ${execi 10 nvidia-smi --query-gpu=power.draw --format=csv,noheader,nounits} W
-${voffset 100}${goto 50}Disk Usage:
+${voffset 90}${goto 50}Disk Usage:
 ${goto 50}/: ${fs_used /} / ${fs_size /} (${fs_used_perc /}%) ${fs_bar 8,200 /}
 ${goto 50}/home: ${fs_used /home} / ${fs_size /home} (${fs_used_perc /home}%) ${fs_bar 8,200 /home}
+${goto 50}/cave: ${fs_used /mnt/cave} / ${fs_size /mnt/cave} (${fs_used_perc /mnt/cave}%) ${fs_bar 8,200 /mnt/cave}
 ${goto 50}workspace: ${fs_used /home/zozo/workspaces} / ${fs_size /home/zozo/workspaces} (${fs_used_perc /home/zozo/workspaces}%) ${fs_bar 8,200 /home/zozo/workspaces}
 
-${voffset -120}${goto 700}Network IP Address: ${addr wlp14s0} 
+${voffset -140}${goto 700}Network IP Address: ${addr wlp14s0} 
 ${goto 700}Connection Type: ${if_existing /sys/class/net/wlp14s0/operstate up}WiFi${else}${if_existing /sys/class/net/enp3s0/operstate up}Ethernet${else}Disconnected${endif}${endif}
 ${goto 700}Down: ${downspeedf wlp14s0} KiB/s ${downspeedgraph wlp14s0 25,200 00ff00 ff0000}
 ${goto 700}Up:   ${upspeedf wlp14s0} KiB/s ${upspeedgraph wlp14s0 25,200 00ffff ff00ff}
